--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
               //require Node modules
 
-              var https = require('https');
+            /*  var https = require('https');
               var querystring = require('querystring');
 
               // build the data object
@@ -121,7 +121,7 @@
               // post the data
 
               request.write(postData);
-              request.end();
+              request.end(); */
 
 
       </script>
