--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <style> body {padding: 0; margin: 0;} </style>
 
 
-    
+    <script src="require.js" type = "text/javascript"></script>
+    <script src="require.min.js" type = "text/javascript"></script>
     <!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
     </head>
     <body>
