--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 
 
     <script src="require.js" type = "text/javascript"></script>
-    <script src="require.min.js" type = "text/javascript"></script>
-    <!-- Start of HubSpot Embed Code -->
-          <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/5578497.js">
-          </script>
-          <!-- End of HubSpot Embed Code -->
-    <!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
-    </head>
+   <script src="require.min.js" type = "text/javascript"></script>
+ </script>
+  <!--custom head HTML-->
+<!-- Start of HubSpot Embed Code -->
+<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/5578497.js"></script>
+<!-- End of HubSpot Embed Code -->
+
+  <!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
+   </head>
     <body>
       <script src="p5.min.js" type = "text/javascript"></script>
       <script src="p5.dom.min.js" type = "text/javascript"></script>
@@ -69,7 +71,7 @@
       </div>
 
 
-      <script>
+       <script>
 
 
 
@@ -140,17 +142,16 @@
       </script>
 
           <!-- Set up the path for the initial page view -->
-            <script>
+           <script>
             var url = 'https://track.hubspot.com/v1/event?_n=000000001625&_a=5578497&email=testingapis@hubspot.com'
             var _hsq = window._hsq = window._hsq || [];
             _hsq.push(['setPath', '/home']);
             </script>
 
 
-        
 
           <!-- Tracking subsequent page views -->
-          <script>
+         <script>
               var _hsq = window._hsq = window._hsq || [];
               _hsq.push(['setPath', '/about-us']);
               _hsq.push(['trackPageView']);
