--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
   <!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
    </head>
     <body>
-      <script src="p5.min.js" type = "text/javascript"></script>
-      <script src="p5.dom.min.js" type = "text/javascript"></script>
 
       <!--<script src="p5.sound.min.js" type = "text/javascript"></script>-->
 
@@ -41,19 +39,19 @@
                   <div class="row h-100 justify-content-center align-items-center">
                     <form class="col-12" id="theForm">
                       <title>Demo Requests</title>
-                <div class="form-group">
+                <div class="form-group" data-required="true">
                   <label for="formEmailInput">Email</label>
                   <input type="email" class="form-control" id="formEmailInput" placeholder="Ex: info@example.com">
                 </div>
-                <div class="form-group">
+                <div class="form-group" data-required="true">
                   <label for="formCompanyInput">Company</label>
                   <input type="text" class="form-control" id="formCompanyInput" placeholder="Ex: HubSpot ">
                 </div>
-                <div class="form-group">
+                <div class="form-group" data-required="true">
                   <label for="formFirstNameInput">First Name</label>
                   <input type="text" class="form-control" id="formFirstNameInput" placeholder="Ex: Jane">
                 </div>
-                <div class="form-group">
+                <div class="form-group" data-required="true">
                   <label for="formLastNameInput">Last Name</label>
                   <input type="text" class="form-control" id="formLastNameInput" placeholder="Ex: Smith">
                 </div>
@@ -76,15 +74,16 @@
 
 
 
-              document.getElementById("subBut").onclick = function() {
-                  _hsq.push(["trackEvent", {
-                  id: "Clicked submit button",
+            document.getElementById("subBut").onclick = function() {
+                _hsq.push(["trackEvent", {
+                id: "Clicked submit button",
 
-                   });
+              }]);
                 };
 
 
-          </script>
+
+       </script>
 
     </body>
 
